# WindForge

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  wind_sweep_results.csv
.github/workflows/: ci.yml
examples/: optimize_load.py  optimize_map.py  run_2mass_gust.py  run_generator_case.py  run_mppt.py  run_mppt_animation.py  run_single_case.py  run_wind_sweep.py
src/windforge/: __init__.py  aero.py  controllers.py  drivetrain.py  generator.py  license.txt  metrics.py  plots.py  pyproject.toml  report.py  rotor.py  sim.py  sim_2mass.py  sim_mppt.py  wind.py
tests/: test_generator_sim.py
